@@ -1,126 +1,135 @@
 package com.yas.product.controller;
 
+import com.yas.commonlibrary.exception.NotFoundException;
 import com.yas.product.model.Brand;
 import com.yas.product.repository.BrandRepository;
 import com.yas.product.service.BrandService;
+import com.yas.product.viewmodel.brand.BrandListGetVm;
 import com.yas.product.viewmodel.brand.BrandPostVm;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.security.oauth2.server.resource.autoconfigure.servlet.OAuth2ResourceServerAutoConfiguration;
-import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
-import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.MediaType;
-
 import org.springframework.test.web.servlet.MockMvc;
-import tools.jackson.databind.ObjectMapper;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@WebMvcTest(controllers = BrandController.class,
-    excludeAutoConfiguration = OAuth2ResourceServerAutoConfiguration.class)
-@AutoConfigureMockMvc(addFilters = false)
+@ExtendWith(MockitoExtension.class)
 class BrandControllerTest {
 
-    @Autowired
     private MockMvc mockMvc;
 
-    @MockitoBean
+    @Mock
     private BrandRepository brandRepository;
 
-    @MockitoBean
+    @Mock
     private BrandService brandService;
 
-    private final ObjectMapper objectMapper = new ObjectMapper();
+    @InjectMocks
+    private BrandController brandController;
 
-    @Test
-    void testListBrands() throws Exception {
-
-        when(brandRepository.findByNameContainingIgnoreCase(any())).thenReturn(Arrays.asList(
-                createBrand(1L, "Brand 1"),
-                createBrand(2L, "Brand 2")
-        ));
-
-        mockMvc.perform(get("/backoffice/brands"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1L))
-                .andExpect(jsonPath("$[0].name").value("Brand 1"))
-                .andExpect(jsonPath("$[1].id").value(2L))
-                .andExpect(jsonPath("$[1].name").value("Brand 2"));
+    @BeforeEach
+    void setUp() {
+        // Vô hiệu hóa Validator để tập trung test logic của Controller
+        mockMvc = MockMvcBuilders.standaloneSetup(brandController)
+                .setValidator(new org.springframework.validation.Validator() {
+                    @Override public boolean supports(Class<?> clazz) { return true; }
+                    @Override public void validate(Object target, org.springframework.validation.Errors errors) {}
+                })
+                .build();
     }
 
     @Test
-    void testGetBrand() throws Exception {
-        Brand brand = createBrand(1L, "Brand 1");
+    void listBrands_ShouldReturnList() throws Exception {
+        Brand brand = new Brand();
+        brand.setId(1L);
+        brand.setName("Samsung");
+        
+        when(brandRepository.findByNameContainingIgnoreCase(anyString())).thenReturn(List.of(brand));
 
+        mockMvc.perform(get("/backoffice/brands")
+                        .param("brandName", "Sam"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].name").value("Samsung"));
+    }
+
+    @Test
+    void getPageableBrands_ShouldReturnPagedResult() throws Exception {
+        BrandListGetVm pagedResult = new BrandListGetVm(List.of(), 0, 10, 0, 0, false);
+        when(brandService.getBrands(anyInt(), anyInt())).thenReturn(pagedResult);
+
+        mockMvc.perform(get("/backoffice/brands/paging"))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    void getBrand_ShouldReturnBrand_WhenFound() throws Exception {
+        Brand brand = new Brand();
+        brand.setId(1L);
+        brand.setName("Apple");
         when(brandRepository.findById(1L)).thenReturn(Optional.of(brand));
 
         mockMvc.perform(get("/backoffice/brands/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1L))
-                .andExpect(jsonPath("$.name").value("Brand 1"));
+                .andExpect(jsonPath("$.name").value("Apple"));
     }
 
     @Test
-    void testGetBrandNotFound() throws Exception {
-        when(brandRepository.findById(anyLong())).thenReturn(Optional.empty());
-
-        mockMvc.perform(get("/backoffice/brands/999"))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testCreateBrand() throws Exception {
-        BrandPostVm brandPostVm = new BrandPostVm("New Brand", "newB", true);
-        Brand brand = createBrand(1L, "New Brand");
-
+    void createBrand_ShouldReturnCreated() throws Exception {
+        Brand brand = new Brand();
+        brand.setId(1L);
+        brand.setName("Sony");
+        brand.setSlug("sony");
+        brand.setPublished(true);
+        
         when(brandService.create(any(BrandPostVm.class))).thenReturn(brand);
 
+        // Đã bổ sung trường isPublish vào chuỗi JSON
+        String json = "{\"name\": \"Sony\", \"slug\": \"sony\", \"isPublish\": true}";
+        
         mockMvc.perform(post("/backoffice/brands")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(brandPostVm)))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id").value(1L))
-                .andExpect(jsonPath("$.name").value("New Brand"));
+                        .content(json))
+                .andExpect(status().isCreated());
     }
 
     @Test
-    void testUpdateBrand() throws Exception {
-        BrandPostVm brandPostVm = new BrandPostVm("Updated Brand", "update-b", true);
-
+    void updateBrand_ShouldReturnNoContent() throws Exception {
+        // Đã bổ sung trường isPublish vào chuỗi JSON
+        String json = "{\"name\": \"LG\", \"slug\": \"lg\", \"isPublish\": true}";
+        
         mockMvc.perform(put("/backoffice/brands/1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(brandPostVm)))
+                        .content(json))
                 .andExpect(status().isNoContent());
+        
+        verify(brandService).update(any(BrandPostVm.class), eq(1L));
     }
 
     @Test
-    void testDeleteBrand() throws Exception {
-        Brand brand = createBrand(1L, "Brand 1");
-        when(brandRepository.findById(1L)).thenReturn(Optional.of(brand));
-
+    void deleteBrand_ShouldReturnNoContent() throws Exception {
         mockMvc.perform(delete("/backoffice/brands/1"))
                 .andExpect(status().isNoContent());
+        
+        verify(brandService).delete(1L);
     }
 
-    private Brand createBrand(Long id, String name) {
-        Brand brand = new Brand();
-        brand.setId(id);
-        brand.setName(name);
-        brand.setProducts(Collections.emptyList());
-        return brand;
+    @Test
+    void getBrandsByIds_ShouldReturnList() throws Exception {
+        when(brandService.getBrandsByIds(anyList())).thenReturn(List.of());
+
+        mockMvc.perform(get("/backoffice/brands/by-ids")
+                        .param("ids", "1,2"))
+                .andExpect(status().isOk());
     }
 }
